:bug: Fixed the always-visible scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,6 @@ body {
 body > #root {
   width: 100vw;
   height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch; /* enables “momentum” (smooth) scrolling */
 }
